[package]
name = "deviceone"
version = "0.1.0"
edition = "2021"
description = "A modern device management platform"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
axum = "0.7.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "sqlite", "postgres"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower-http = { version = "0.5.0", features = ["cors"] }
tower = "0.4.13"
async-trait = "0.1.74"
thiserror = "1.0.51"
anyhow = "1.0.76"
futures = "0.3.29"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
ssh2 = "0.9.4"
sysinfo = "0.29.11"
tonic = "0.10.2"
prost = "0.12.3"

[build-dependencies]
tonic-build = "0.10.2"
